// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox component renders without crashing (checked) 1`] = `
<div
  style="display: flex; font-family: Arial, Helvetica, sans-serif; color: rgb(153, 153, 153); cursor: pointer; font-size: 1em;"
>
  <div
    style="border: 0.05em solid #999; border-radius: 0.25em; width: 1em; height: 1em; display: flex; justify-content: center; align-items: center;"
  >
    <div
      style="width: 0.85em; height: 0.85em; border-radius: 0.25em; background-color: rgb(153, 153, 153);"
    />
  </div>
  <span
    style="padding-left: 0.25em;"
  >
    click me
  </span>
</div>
`;

exports[`Checkbox component renders without crashing (unchecked) 1`] = `
<div
  style="display: flex; font-family: Arial, Helvetica, sans-serif; color: rgb(153, 153, 153); cursor: pointer; font-size: 1em;"
>
  <div
    style="border: 0.05em solid #999; border-radius: 0.25em; width: 1em; height: 1em; display: flex; justify-content: center; align-items: center;"
  >
    <div
      style="width: 0.85em; height: 0.85em; border-radius: 0.25em; background-color: transparent;"
    />
  </div>
  <span
    style="padding-left: 0.25em;"
  >
    click me
  </span>
</div>
`;

exports[`Checkbox component renders without crashing (without text) 1`] = `
<div
  style="display: flex; font-family: Arial, Helvetica, sans-serif; color: rgb(153, 153, 153); cursor: pointer; font-size: 1em;"
>
  <div
    style="border: 0.05em solid #999; border-radius: 0.25em; width: 1em; height: 1em; display: flex; justify-content: center; align-items: center;"
  >
    <div
      style="width: 0.85em; height: 0.85em; border-radius: 0.25em; background-color: transparent;"
    />
  </div>
  <span
    style="padding-left: 0px;"
  />
</div>
`;
